# easy-tokio-rustls

./: Cargo.toml  README.md
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/server/: Cargo.toml  make_cert.sh
examples/server/src/: main.rs
src/: certificates.rs  certstore.rs  client.rs  lib.rs  main.rs  server.rs
