[package]
name = "easy-tokio-rustls"
version = "0.1.0"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2021"
description = "This library provides convenient abstractions for creating simple TLS sockets with `tokio-rustls.`"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-rustls = "0.23.3"
webpki-roots = "0.22.3"
rustls-pemfile = "0.3.0"
thiserror = "1.0.30"
anyhow = "1.0"
